@@ -52,8 +52,8 @@ public class EncryptedPartsBuilder implements AssertionBuilder {
 		OMAttribute isOptional = element
 				.getAttribute(Constants.Q_ELEM_OPTIONAL_ATTR);
 		if (isOptional != null) {
-			signedEncryptedParts.setOptional((new Boolean(isOptional
-					.getAttributeValue()).booleanValue()));
+			signedEncryptedParts.setOptional(Boolean.valueOf(isOptional
+					.getAttributeValue()).booleanValue());
 		}
         
         return signedEncryptedParts;
